refactor: 워커에서 배치 처리를 하나의 트랜잭션에서 처리해 롤백 시 불필요하게 요청되는 문제 해결, 전체 리트라이 수행할 Pacemaker 조회 -> 각각마다 트랜잭션을 분리해 Member,VDOT를 조회해 LLM으로 재요청하는 로직 설계